--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             return texts;
         },
         resources: [
-            {id: 1, title: 'Oda 1 dasdas'}, {id: 2, title: 'Oda 2'}, {id: 3, title: 'Oda 3'}, {id: 4, title: 'Oda 4'},
+            {id: 1, title: 'Oda 1 <br>(Örnek Oda)'}, {id: 2, title: 'Oda 2'}, {id: 3, title: 'Oda 3'}, {id: 4, title: 'Oda 4'},
             {id: 5, title: 'Oda 5'}, {id: 6, title: 'Oda 6'}, {id: 7, title: 'Oda 7'}, {id: 8, title: 'Oda 8'}
         ],
         slotMinTime: '06:00:00', slotMaxTime: '23:00:00',
